ostad-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-ui
  namespace: mehedi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ostad-ui
  template:
    metadata:
      labels:
        app: ostad-ui
    spec:
      containers:
        - name: ostad-ui
          image: mehedime91/ostad-ui-mod-six:latest
          ports:
            - containerPort: 5173
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
