ostad-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-ui
  namespace: mehedi
spec:
  type: LoadBalancer
  selector:
    app: ostad-ui
  ports:
    - port: 5173
      targetPort: 5173
